--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -47,3 +47,29 @@ footer {
     }
 
 }
+
+@media screen and (max-width: 768px){
+    footer{
+        padding: 40px 10px;
+    }
+}
+
+@media screen and (max-width: 550px){
+    footer{
+        flex-wrap: wrap;
+        justify-content: space-around;
+        .footer-copy{
+            order: 1;
+        }
+        .footer-links{
+            order: 3;
+            width: 80%;
+            margin: 0 auto;
+        }
+        .footer-socials{
+            order: 2;
+            width: 20%;
+            
+        }
+    }
+}
